--- a/src/patternfly/utilities/Alignment/examples/Alignment.css
+++ b/src/patternfly/utilities/Alignment/examples/Alignment.css
@@ -1,7 +1,7 @@
-.ws-core-u-alignment .pf-v5-u-text-align-left,
-.ws-core-u-alignment .pf-v5-u-text-align-center,
-.ws-core-u-alignment .pf-v5-u-text-align-right,
-.ws-core-u-alignment .pf-v5-u-text-align-justify {
+.ws-core-u-alignment .pf-v6-u-text-align-start,
+.ws-core-u-alignment .pf-v6-u-text-align-center,
+.ws-core-u-alignment .pf-v6-u-text-align-end,
+.ws-core-u-alignment .pf-v6-u-text-align-justify {
   padding: .5rem !important;
   border: 2px dashed #393f44;
 }
