--- a/src/patternfly/utilities/BoxShadow/box-shadow.scss
+++ b/src/patternfly/utilities/BoxShadow/box-shadow.scss
@@ -1,39 +1,29 @@
 // stylelint-disable
 
-$pf-v5-u-box-shadow-options: (
+$pf-v6-u-box-shadow-options: (
   /* small */
-  box-shadow-sm:        (box-shadow var(--#{$pf-global}--BoxShadow--sm)),
-  box-shadow-sm-top:    (box-shadow var(--#{$pf-global}--BoxShadow--sm-top)),
-  box-shadow-sm-right:  (box-shadow var(--#{$pf-global}--BoxShadow--sm-right)),
-  box-shadow-sm-bottom: (box-shadow var(--#{$pf-global}--BoxShadow--sm-bottom)),
-  box-shadow-sm-left:   (box-shadow var(--#{$pf-global}--BoxShadow--sm-left)),
+  box-shadow-sm:        (box-shadow var(--pf-t--global--box-shadow--sm)),
+  box-shadow-sm-top:    (box-shadow var(--pf-t--global--box-shadow--sm--top)),
+  box-shadow-sm-right:  (box-shadow var(--pf-t--global--box-shadow--sm--right)),
+  box-shadow-sm-bottom: (box-shadow var(--pf-t--global--box-shadow--sm--bottom)),
+  box-shadow-sm-left:   (box-shadow var(--pf-t--global--box-shadow--sm--left)),
 
   /* medium */
-  box-shadow-md:        (box-shadow var(--#{$pf-global}--BoxShadow--md)),
-  box-shadow-md-top:    (box-shadow var(--#{$pf-global}--BoxShadow--md-top)),
-  box-shadow-md-right:  (box-shadow var(--#{$pf-global}--BoxShadow--md-right)),
-  box-shadow-md-bottom: (box-shadow var(--#{$pf-global}--BoxShadow--md-bottom)),
-  box-shadow-md-left:   (box-shadow var(--#{$pf-global}--BoxShadow--md-left)),
+  box-shadow-md:        (box-shadow var(--pf-t--global--box-shadow--md)),
+  box-shadow-md-top:    (box-shadow var(--pf-t--global--box-shadow--md--top)),
+  box-shadow-md-right:  (box-shadow var(--pf-t--global--box-shadow--md--right)),
+  box-shadow-md-bottom: (box-shadow var(--pf-t--global--box-shadow--md--bottom)),
+  box-shadow-md-left:   (box-shadow var(--pf-t--global--box-shadow--md--left)),
 
   /* large */
-  box-shadow-lg:        (box-shadow var(--#{$pf-global}--BoxShadow--lg)),
-  box-shadow-lg-top:    (box-shadow var(--#{$pf-global}--BoxShadow--lg-top)),
-  box-shadow-lg-right:  (box-shadow var(--#{$pf-global}--BoxShadow--lg-right)),
-  box-shadow-lg-bottom: (box-shadow var(--#{$pf-global}--BoxShadow--lg-bottom)),
-  box-shadow-lg-left:   (box-shadow var(--#{$pf-global}--BoxShadow--lg-left)),
-
-  /* x-large */
-  box-shadow-xl:        (box-shadow var(--#{$pf-global}--BoxShadow--xl)),
-  box-shadow-xl-top:    (box-shadow var(--#{$pf-global}--BoxShadow--xl-top)),
-  box-shadow-xl-right:  (box-shadow var(--#{$pf-global}--BoxShadow--xl-right)),
-  box-shadow-xl-bottom: (box-shadow var(--#{$pf-global}--BoxShadow--xl-bottom)),
-  box-shadow-xl-left:   (box-shadow var(--#{$pf-global}--BoxShadow--xl-left)),
-
-  /* inset */
-  box-shadow-inset:     (box-shadow var(--#{$pf-global}--BoxShadow--inset))
+  box-shadow-lg:        (box-shadow var(--pf-t--global--box-shadow--lg)),
+  box-shadow-lg-top:    (box-shadow var(--pf-t--global--box-shadow--lg--top)),
+  box-shadow-lg-right:  (box-shadow var(--pf-t--global--box-shadow--lg--right)),
+  box-shadow-lg-bottom: (box-shadow var(--pf-t--global--box-shadow--lg--bottom)),
+  box-shadow-lg-left:   (box-shadow var(--pf-t--global--box-shadow--lg--left)),
 );
 
 // Text utilities
-@include pf-v5-utility-builder($pf-v5-u-box-shadow-options);
+@include pf-v5-utility-builder($pf-v6-u-box-shadow-options);
 
 // stylelint-enable
