--- a/src/patternfly/utilities/Float/float.scss
+++ b/src/patternfly/utilities/Float/float.scss
@@ -1,11 +1,11 @@
 // stylelint-disable
 
-$pf-v5-u-alignment-options: (
-  float-left: (float left),
-  float-right: (float right)
+$pf-v6-u-alignment-options: (
+  float-start: (float inline-start),
+  float-end: (float inline-end)
 );
 
 // Text utilities
-@include pf-v5-utility-builder($pf-v5-u-alignment-options, $pf-v5-global--breakpoint-list);
+@include pf-v5-utility-builder($pf-v6-u-alignment-options, $pf-v5-global--breakpoint-list);
 
 // stylelint-enable
