--- a/src/patternfly/utilities/Float/float.scss
+++ b/src/patternfly/utilities/Float/float.scss
@@ -1,8 +1,8 @@
 // stylelint-disable
 
 $pf-v6-u-alignment-options: (
-  float-start: (float inline-start),
-  float-end: (float inline-end)
+  float-inline-start: (float inline-start),
+  float-inline-end: (float inline-end)
 );
 
 // Text utilities
