--- a/src/patternfly/components/Label/label.hbs
+++ b/src/patternfly/components/Label/label.hbs
@@ -5,6 +5,7 @@
   {{#if label--IsAdd}} pf-m-add{{/if}}
   {{#if label--IsEditable}} pf-m-editable{{/if}}
   {{#if label--IsEditableActive}} pf-m-editable-active{{/if}}
+  {{#if label--IsDisabled}} pf-m-disabled{{/if}}
   {{#if label--color}}
     pf-m-{{label--color}}
   {{/if}}
@@ -28,8 +29,7 @@
   {{/label-content}}
   {{#if label--isRemovable}}
     {{#> label-actions}}
-      {{#> button button--IsPlain=true button--attribute=(concat 'id="' label--id '-button"
-    aria-label="Remove" aria-labelledby="' label--id '-button ' label--id '-text"')}}
+      {{#> button button--IsPlain=true button--IsDisabled=label--IsDisabled button--attribute=(concat 'id="' label--id '-button" aria-label="Remove" aria-labelledby="' label--id '-button ' label--id '-text"')}}
         <i class="fas fa-times fa-fw" aria-hidden="true"></i>
       {{/button}}
     {{/label-actions}}
