chore(label): fix ids

--- a/src/patternfly/components/Label/label-template-variants.hbs
+++ b/src/patternfly/components/Label/label-template-variants.hbs
@@ -57,7 +57,7 @@
 
 {{> label
     label--isRemovable=true
-    label--id=(concat label-template-variants--id '-link-removable')
+    label--id=(concat label-template-variants--id '-link-disabled')
     label--IsDisabled=true
     label-text--value=(concat label-template-variants--title ' link removable (disabled)')
     label-content--IsLink=true
@@ -65,7 +65,7 @@
 
 {{> label
     label--isRemovable=true
-    label--id=(concat label-template-variants--id '-clickable-removable')
+    label--id=(concat label-template-variants--id '-clickable-disabled')
     label--IsDisabled=true
     label-text--value=(concat label-template-variants--title ' clickable removable (disabled)')
     label-content--IsAction=true
