--- a/src/patternfly/components/Label/label.scss
+++ b/src/patternfly/components/Label/label.scss
@@ -243,6 +243,12 @@
   --#{$label}--m-editable--m-editable-active--BackgroundColor: transparent;
   --#{$label}--m-editable--m-editable-active--Color: var(--pf-t--global--text--color--regular);
   --#{$label}--m-editable--m-editable-active__content--Cursor: initial;
+
+  // Disabled
+  --#{$label}--m-disabled--BackgroundColor: var(--pf-t--global--background--color--disabled--default);
+  --#{$label}--m-disabled--Color: var(--pf-t--global--text--color--on-disabled);
+  --#{$label}--m-disabled__icon--Color: var(--pf-t--global--icon--color--on-disabled);
+  --#{$label}--m-disabled--c-button--disabled--Color: var(--pf-t--global--text--color--on-disabled);
 }
 
 .#{$label} {
@@ -506,6 +512,19 @@
           --#{$label}--m-filled__actions--c-button--Color: var(--#{$label}--m-clickable--hover__icon--Color);
         }
       }
+    }
+  }
+
+  &.pf-m-disabled {
+    --#{$label}--BackgroundColor: var(--#{$label}--m-disabled--BackgroundColor);
+    --#{$label}--Color: var(--#{$label}--m-disabled--Color);
+    --#{$label}__icon--Color: var(--#{$label}--m-disabled__icon--Color);
+    --#{$label}--BorderWidth: 0;
+
+    pointer-events: none;
+
+    .#{$button} {
+      --#{$button}--m-plain--disabled--Color: var(--#{$label}--m-disabled--c-button--disabled--Color);
     }
   }
 }
