chore(label): update disabled link to be an even more disabled link

--- a/src/patternfly/components/Label/label-content.hbs
+++ b/src/patternfly/components/Label/label-content.hbs
@@ -8,7 +8,10 @@
   {{#if label-content--modifier}} {{label-content--modifier}}{{/if}}"
   {{#if label-content--IsLink}}
     href="#"
-  {{/if}}
+    {{#if label--IsDisabled}}
+      tabindex="-1"
+      aria-disabled="true"
+    {{/if}}  {{/if}}
   {{#if label-content--IsButton}}
     type="button"
     {{#if label--IsDisabled}}
