--- a/src/patternfly/components/Label/label-content.hbs
+++ b/src/patternfly/components/Label/label-content.hbs
@@ -4,6 +4,10 @@
 <{{#if label-content--IsLink}}a{{else if label-content--IsAction}}button{{else}}span{{/if}} class="{{pfv}}label__content{{#if label-content--modifier}} {{label-content--modifier}}{{/if}}"
   {{#if label-content--IsLink}}
     href="#"
+    {{#if label--IsDisabled}}
+      tabindex="-1"
+      aria-hidden="true"
+    {{/if}}
   {{/if}}
   {{#if label-content--IsAction}}
     type="button"
