chore(label): hidden/disabled typo

--- a/src/patternfly/components/Label/label-content.hbs
+++ b/src/patternfly/components/Label/label-content.hbs
@@ -6,7 +6,7 @@
     href="#"
     {{#if label--IsDisabled}}
       tabindex="-1"
-      aria-hidden="true"
+      aria-disabled="true"
     {{/if}}
   {{/if}}
   {{#if label-content--IsAction}}
