chore(tokens): update tokens with new status colors and border on secondary

--- a/src/patternfly/base/tokens/_tokens-charts.scss
+++ b/src/patternfly/base/tokens/_tokens-charts.scss
@@ -1,14 +1,14 @@
 // /**
 //  * Do not edit directly
-//  * Generated on Tue, 20 Feb 2024 01:08:05 GMT
+//  * Generated on Thu, 21 Mar 2024 17:46:16 GMT
 //  */
 
 :root {
-  --pf-t--chart--stroke--width--sm: 2px;
-  --pf-t--chart--stroke--width--xs: 1px;
-  --pf-t--chart--BorderWidth--lg: 8px;
-  --pf-t--chart--BorderWidth--sm: 2px;
-  --pf-t--chart--BorderWidth--xs: 1px;
+  --pf-t--chart--stroke--width--sm: 2;
+  --pf-t--chart--stroke--width--xs: 1;
+  --pf-t--chart--BorderWidth--lg: 8;
+  --pf-t--chart--BorderWidth--sm: 2;
+  --pf-t--chart--BorderWidth--xs: 1;
   --pf-t--chart--color--fills-and-strokes--fill--color--white: var(--pf-t--color--white);
   --pf-t--chart--color--fills-and-strokes--fill--color--900: var(--pf-t--color--gray--90);
   --pf-t--chart--color--fills-and-strokes--fill--color--700: var(--pf-t--color--gray--70);
