--- a/src/patternfly/base/tokens/_tokens-default.scss
+++ b/src/patternfly/base/tokens/_tokens-default.scss
@@ -1,6 +1,6 @@
 // /**
 //  * Do not edit directly
-//  * Generated on Tue, 20 Feb 2024 01:08:05 GMT
+//  * Generated on Thu, 21 Mar 2024 17:46:16 GMT
 //  */
 
 :root {
@@ -98,18 +98,18 @@
   --pf-t--global--color--nonstatus--red--300: var(--pf-t--color--red--40);
   --pf-t--global--color--nonstatus--red--200: var(--pf-t--color--red--30);
   --pf-t--global--color--nonstatus--red--100: var(--pf-t--color--red--20);
-  --pf-t--global--color--status--custom--200: var(--pf-t--color--teal--60);
-  --pf-t--global--color--status--custom--100: var(--pf-t--color--teal--50);
+  --pf-t--global--color--status--custom--200: var(--pf-t--color--teal--70);
+  --pf-t--global--color--status--custom--100: var(--pf-t--color--teal--60);
   --pf-t--global--color--status--info--200: var(--pf-t--color--purple--60);
   --pf-t--global--color--status--info--100: var(--pf-t--color--purple--50);
   --pf-t--global--color--status--danger--300: var(--pf-t--color--red-orange--70);
-  --pf-t--global--color--status--danger--200: var(--pf-t--color--red-orange--60);
-  --pf-t--global--color--status--danger--100: var(--pf-t--color--red-orange--50);
+  --pf-t--global--color--status--danger--200: var(--pf-t--color--red-orange--70);
+  --pf-t--global--color--status--danger--100: var(--pf-t--color--red-orange--60);
   --pf-t--global--color--status--warning--300: var(--pf-t--color--yellow--50);
   --pf-t--global--color--status--warning--200: var(--pf-t--color--yellow--40);
   --pf-t--global--color--status--warning--100: var(--pf-t--color--yellow--30);
-  --pf-t--global--color--status--success--200: var(--pf-t--color--green--60);
-  --pf-t--global--color--status--success--100: var(--pf-t--color--green--50);
+  --pf-t--global--color--status--success--200: var(--pf-t--color--green--70);
+  --pf-t--global--color--status--success--100: var(--pf-t--color--green--60);
   --pf-t--global--color--favorite--200: var(--pf-t--color--yellow--40);
   --pf-t--global--color--favorite--100: var(--pf-t--color--yellow--30);
   --pf-t--global--color--disabled--300: var(--pf-t--color--gray--60);
@@ -180,6 +180,7 @@
   --pf-t--global--font--size--md: var(--pf-t--global--font--size--300);
   --pf-t--global--font--size--sm: var(--pf-t--global--font--size--200);
   --pf-t--global--font--size--xs: var(--pf-t--global--font--size--100);
+  --pf-t--global--border--color--300: var(--pf-t--color--gray--50);
   --pf-t--global--border--color--200: var(--pf-t--color--gray--40);
   --pf-t--global--border--color--100: var(--pf-t--color--gray--30);
   --pf-t--global--border--radius--pill: var(--pf-t--global--border--radius--500);
@@ -228,9 +229,6 @@
   --pf-t--global--spacer--md: var(--pf-t--global--spacer--300);
   --pf-t--global--spacer--sm: var(--pf-t--global--spacer--200);
   --pf-t--global--spacer--xs: var(--pf-t--global--spacer--100);
-  --pf-t--global--text--color--status--danger--clicked: var(--pf-t--global--color--status--danger--300);
-  --pf-t--global--text--color--status--danger--hover: var(--pf-t--global--color--status--danger--300);
-  --pf-t--global--text--color--status--danger--default: var(--pf-t--global--color--status--danger--200);
   --pf-t--global--text--color--status--warning--clicked: var(--pf-t--global--color--status--warning--300);
   --pf-t--global--text--color--status--warning--hover: var(--pf-t--global--color--status--warning--300);
   --pf-t--global--text--color--status--warning--default: var(--pf-t--global--color--status--warning--200);
@@ -342,6 +340,7 @@
   --pf-t--global--border--color--nonstatus--red--clicked: var(--pf-t--global--color--nonstatus--red--300);
   --pf-t--global--border--color--nonstatus--red--hover: var(--pf-t--global--color--nonstatus--red--300);
   --pf-t--global--border--color--nonstatus--red--default: var(--pf-t--global--color--nonstatus--red--200);
+  --pf-t--global--border--color--on-secondary: var(--pf-t--global--border--color--300);
   --pf-t--global--border--color--clicked: var(--pf-t--global--color--brand--200);
   --pf-t--global--border--color--hover: var(--pf-t--global--color--brand--100);
   --pf-t--global--border--color--default: var(--pf-t--global--border--color--100);
@@ -393,13 +392,13 @@
   --pf-t--global--text--color--nonstatus--on-red--default: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--status--unread--on-attention--clicked: var(--pf-t--global--text--color--inverse);
   --pf-t--global--text--color--status--unread--on-attention--hover: var(--pf-t--global--text--color--inverse);
-  --pf-t--global--text--color--status--unread--on-attention--default: var(--pf-t--global--text--color--regular);
+  --pf-t--global--text--color--status--unread--on-attention--default: var(--pf-t--global--text--color--inverse);
   --pf-t--global--text--color--status--unread--on-default--clicked: var(--pf-t--global--text--color--inverse);
   --pf-t--global--text--color--status--unread--on-default--hover: var(--pf-t--global--text--color--inverse);
   --pf-t--global--text--color--status--unread--on-default--default: var(--pf-t--global--text--color--inverse);
   --pf-t--global--text--color--status--on-custom--clicked: var(--pf-t--global--text--color--inverse);
   --pf-t--global--text--color--status--on-custom--hover: var(--pf-t--global--text--color--inverse);
-  --pf-t--global--text--color--status--on-custom--default: var(--pf-t--global--text--color--regular);
+  --pf-t--global--text--color--status--on-custom--default: var(--pf-t--global--text--color--inverse);
   --pf-t--global--text--color--status--custom--clicked: var(--pf-t--global--color--status--custom--clicked);
   --pf-t--global--text--color--status--custom--hover: var(--pf-t--global--color--status--custom--hover);
   --pf-t--global--text--color--status--custom--default: var(--pf-t--global--color--status--custom--default);
@@ -411,13 +410,16 @@
   --pf-t--global--text--color--status--info--default: var(--pf-t--global--color--status--info--default);
   --pf-t--global--text--color--status--on-danger--clicked: var(--pf-t--global--icon--color--inverse);
   --pf-t--global--text--color--status--on-danger--hover: var(--pf-t--global--text--color--inverse);
-  --pf-t--global--text--color--status--on-danger--default: var(--pf-t--global--text--color--regular);
+  --pf-t--global--text--color--status--on-danger--default: var(--pf-t--global--text--color--inverse);
+  --pf-t--global--text--color--status--danger--clicked: var(--pf-t--global--color--status--danger--clicked);
+  --pf-t--global--text--color--status--danger--hover: var(--pf-t--global--color--status--danger--hover);
+  --pf-t--global--text--color--status--danger--default: var(--pf-t--global--color--status--danger--default);
   --pf-t--global--text--color--status--on-warning--clicked: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--status--on-warning--hover: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--status--on-warning--default: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--status--on-success--clicked: var(--pf-t--global--text--color--inverse);
   --pf-t--global--text--color--status--on-success--hover: var(--pf-t--global--text--color--inverse);
-  --pf-t--global--text--color--status--on-success--default: var(--pf-t--global--text--color--regular);
+  --pf-t--global--text--color--status--on-success--default: var(--pf-t--global--text--color--inverse);
   --pf-t--global--text--color--status--success--clicked: var(--pf-t--global--color--status--success--clicked);
   --pf-t--global--text--color--status--success--hover: var(--pf-t--global--color--status--success--hover);
   --pf-t--global--text--color--status--success--default: var(--pf-t--global--color--status--success--default);
@@ -482,13 +484,13 @@
   --pf-t--global--icon--color--nonstatus--on-red--default: var(--pf-t--global--icon--color--regular);
   --pf-t--global--icon--color--status--unread--on-attention--clicked: var(--pf-t--global--icon--color--inverse);
   --pf-t--global--icon--color--status--unread--on-attention--hover: var(--pf-t--global--icon--color--inverse);
-  --pf-t--global--icon--color--status--unread--on-attention--default: var(--pf-t--global--icon--color--regular);
+  --pf-t--global--icon--color--status--unread--on-attention--default: var(--pf-t--global--icon--color--inverse);
   --pf-t--global--icon--color--status--unread--on-default--clicked: var(--pf-t--global--icon--color--inverse);
   --pf-t--global--icon--color--status--unread--on-default--hover: var(--pf-t--global--icon--color--inverse);
   --pf-t--global--icon--color--status--unread--on-default--default: var(--pf-t--global--icon--color--inverse);
   --pf-t--global--icon--color--status--on-custom--clicked: var(--pf-t--global--icon--color--inverse);
   --pf-t--global--icon--color--status--on-custom--hover: var(--pf-t--global--icon--color--inverse);
-  --pf-t--global--icon--color--status--on-custom--default: var(--pf-t--global--icon--color--regular);
+  --pf-t--global--icon--color--status--on-custom--default: var(--pf-t--global--icon--color--inverse);
   --pf-t--global--icon--color--status--custom--clicked: var(--pf-t--global--color--status--custom--clicked);
   --pf-t--global--icon--color--status--custom--hover: var(--pf-t--global--color--status--custom--hover);
   --pf-t--global--icon--color--status--custom--default: var(--pf-t--global--color--status--custom--default);
@@ -500,7 +502,7 @@
   --pf-t--global--icon--color--status--info--default: var(--pf-t--global--color--status--info--default);
   --pf-t--global--icon--color--status--on-danger--clicked: var(--pf-t--global--icon--color--inverse);
   --pf-t--global--icon--color--status--on-danger--hover: var(--pf-t--global--icon--color--inverse);
-  --pf-t--global--icon--color--status--on-danger--default: var(--pf-t--global--icon--color--regular);
+  --pf-t--global--icon--color--status--on-danger--default: var(--pf-t--global--icon--color--inverse);
   --pf-t--global--icon--color--status--danger--clicked: var(--pf-t--global--color--status--danger--clicked);
   --pf-t--global--icon--color--status--danger--hover: var(--pf-t--global--color--status--danger--hover);
   --pf-t--global--icon--color--status--danger--default: var(--pf-t--global--color--status--danger--default);
@@ -509,7 +511,7 @@
   --pf-t--global--icon--color--status--on-warning--default: var(--pf-t--global--icon--color--regular);
   --pf-t--global--icon--color--status--on-success--clicked: var(--pf-t--global--icon--color--inverse);
   --pf-t--global--icon--color--status--on-success--hover: var(--pf-t--global--icon--color--inverse);
-  --pf-t--global--icon--color--status--on-success--default: var(--pf-t--global--icon--color--regular);
+  --pf-t--global--icon--color--status--on-success--default: var(--pf-t--global--icon--color--inverse);
   --pf-t--global--icon--color--status--success--clicked: var(--pf-t--global--color--status--success--clicked);
   --pf-t--global--icon--color--status--success--hover: var(--pf-t--global--color--status--success--hover);
   --pf-t--global--icon--color--status--success--default: var(--pf-t--global--color--status--success--default);
