--- a/src/patternfly/components/Page/page-main.hbs
+++ b/src/patternfly/components/Page/page-main.hbs
@@ -1,6 +1,8 @@
-<main class="{{pfv}}page__main{{#if page-main--modifier}} {{page-main--modifier}}{{/if}}" tabindex="-1"
-  {{#if page-main--attribute}}
-    {{{page-main--attribute}}}
-  {{/if}}>
-  {{> @partial-block}}
-</main>
+{{#> page-main-container}}
+  <main class="{{pfv}}page__main{{#if page-main--modifier}} {{page-main--modifier}}{{/if}}" tabindex="-1"
+    {{#if page-main--attribute}}
+      {{{page-main--attribute}}}
+    {{/if}}>
+    {{> @partial-block}}
+  </main>
+{{/page-main-container}}
